compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_size_not_int.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 185
expression: "let x = <<1:size(\"1\")>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:size("1")>> x

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:18
  │
1 │ let x = <<1:size("1")>> x
  │                  ^^^

Expected type:

    Int

Found type:

    String
