compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_using_pattern_variables.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3137
expression: "let assert #(a, <<b:size(a)>>) = #(2, <<2:2>>)"
snapshot_kind: text
---
----- SOURCE CODE
let assert #(a, <<b:size(a)>>) = #(2, <<2:2>>)

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:1:26
  │
1 │ let assert #(a, <<b:size(a)>>) = #(2, <<2:2>>)
  │                          ^

The name `a` is not in scope here.
