compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_arrays4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 30
expression: "let <<x:utf32>> = <<1>>"
snapshot_kind: text
---
----- SOURCE CODE
let <<x:utf32>> = <<1>>

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:7
  │
1 │ let <<x:utf32>> = <<1>>
  │       ^^^^^^^ This cannot be a variable

Hint: in patterns utf8, utf16, and utf32  must be an exact string.
See: https://tour.gleam.run/data-types/bit-arrays/
