compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case19.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 540
expression: "case [1] { [x] | x -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case [1] { [x] | x -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:18
  │
1 │ case [1] { [x] | x -> 1 }
  │                  ^

Expected type:

    Int

Found type:

    List(Int)
