compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case_clause_mismatch.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 271
expression: "case 1 { a -> 1 b -> 2.0 }"
snapshot_kind: text
---
----- SOURCE CODE
case 1 { a -> 1 b -> 2.0 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:17
  │
1 │ case 1 { a -> 1 b -> 2.0 }
  │                 ^^^^^^^^

This case clause was found to return a different type than the previous
one, but all case clauses must return the same type.

Expected type:

    Int

Found type:

    Float
